--- a/Backendless/.gitignore
+++ b/Backendless/.gitignore
@@ -1,9 +1,40 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
+
 # dependencies
 /node_modules
+jspm_packages/
 /.pnp
 .pnp.js
+
+# Distribution directories
+dist/
+#build files
+dist
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
 
 # testing
 /coverage
@@ -22,6 +53,8 @@ yarn-debug.log*
 yarn-error.log*
 
 
+# Typescript v1 declaration files
+typings/
 
 # typescript
 *.tsbuildinfo
