--- a/Backendless/package.json
+++ b/Backendless/package.json
@@ -15,10 +15,12 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
     "prettier": "3.0.3",
     "react": "^18.2.0",
@@ -27,12 +29,14 @@
     "sass-loader": "^13.3.2",
     "scss-loader": "^0.0.1",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "core-js": "^3.33.1",
+    "init": "^0.1.2",
     "regenerator-runtime": "^0.14.0"
   }
 }
