--- a/Backendless/package.json
+++ b/Backendless/package.json
@@ -15,9 +15,11 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "@faker-js/faker": "^8.2.0",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "gatsby-plugin-sharp": "^5.12.3",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.31",
@@ -37,6 +39,7 @@
   "dependencies": {
     "core-js": "^3.33.1",
     "init": "^0.1.2",
+    "react-router-dom": "^6.17.0",
     "regenerator-runtime": "^0.14.0"
   }
 }
