--- a/Backendless/package.json
+++ b/Backendless/package.json
@@ -18,6 +18,8 @@
     "@faker-js/faker": "^8.2.0",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.0",
     "css-loader": "^6.8.1",
     "gatsby-plugin-sharp": "^5.12.3",
     "html-webpack-plugin": "^5.5.3",
@@ -26,6 +28,7 @@
     "postcss-loader": "^7.3.3",
     "prettier": "3.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
