--- a/Backendless/package.json
+++ b/Backendless/package.json
@@ -15,24 +15,34 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
+    "@faker-js/faker": "^8.2.0",
+    "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.0",
     "css-loader": "^6.8.1",
+    "gatsby-plugin-sharp": "^5.12.3",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
     "prettier": "3.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "scss-loader": "^0.0.1",
     "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "core-js": "^3.33.1",
+    "init": "^0.1.2",
+    "react-router-dom": "^6.17.0",
     "regenerator-runtime": "^0.14.0"
   }
 }
